# ppl

./: .gitignore  README.md  ppl.cabal  stack.yaml
Cpp/: getVertices.cpp
src/: TemporaryFile.hs  Vertices.hs
src-exe/: Main.hs
