name:                ppl
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/stla/ppl#readme
license:             GPL-3
author:              Stéphane Laurent
maintainer:          laurent_step@yahoo.fr
copyright:           2018 Stéphane Laurent
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Vertices
                     , TemporaryFile
  build-depends:       base >= 4.7 && < 5
                     , path
                     , directory
                     , containers
                     , Unique
                     , vector-space
  other-extensions:    ForeignFunctionInterface
  default-language:    Haskell2010
  include-dirs:        Cpp
  C-sources:           Cpp/getVertices.cpp
  extra-libraries:     stdc++, ppl, gmp

executable test
  buildable:           True
  hs-source-dirs:      src-exe
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , ppl

source-repository head
  type:     git
  location: https://github.com/stla/ppl
